force-app/main/default/objects/Trade_Execution__c/Trade_Execution__c.object-meta.xml
<CustomObject>
    <label>Trade Execution</label>
    <nameField>
        <displayFormat>EXE-{000000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>