force-app/main/default/objects/Trade_Execution__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>