force-app/main/default/objects/Trade_Execution__c/fields/Exchange_Charges__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Charges__c</fullName>
    <label>Exchange Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>