force-app/main/default/objects/Trade_Execution__c/fields/Exchange_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Order_ID__c</fullName>
    <label>Exchange Order ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>