force-app/main/default/objects/Trade_Execution__c/fields/Exchange_Trade_ID__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Trade_ID__c</fullName>
    <label>Exchange Trade ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>