force-app/main/default/objects/Trade_Execution__c/fields/Executed_Price__c.field-meta.xml
<CustomField>
    <fullName>Executed_Price__c</fullName>
    <label>Executed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>