force-app/main/default/objects/Trade_Execution__c/fields/Executed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Executed_Quantity__c</fullName>
    <label>Executed Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>