force-app/main/default/objects/Trade_Execution__c/fields/Execution_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Execution Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>