force-app/main/default/objects/Trade_Execution__c/fields/Execution_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Execution_Remarks__c</fullName>
    <label>Execution Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>