force-app/main/default/objects/Trade_Execution__c/fields/Execution_Value__c.field-meta.xml
<CustomField>
    <fullName>Execution_Value__c</fullName>
    <formula>Executed_Quantity__c * Executed_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>