force-app/main/default/objects/Trade_Execution__c/fields/SEBI_Charges__c.field-meta.xml
<CustomField>
    <fullName>SEBI_Charges__c</fullName>
    <label>SEBI Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>