force-app/main/default/objects/Trade_Execution__c/fields/Slippage__c.field-meta.xml
<CustomField>
    <fullName>Slippage__c</fullName>
    <formula>Executed_Price__c - Trade_Request__r.Entry_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slippage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>