force-app/main/default/objects/Trade_Execution__c/fields/STT_Securities_Transaction_Tax__c.field-meta.xml
<CustomField>
    <fullName>STT_Securities_Transaction_Tax__c</fullName>
    <label>STT (Securities Transaction Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>