force-app/main/default/objects/Trade_Execution__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <formula>Brokerage__c +  Exchange_Charges__c + GST__c +  STT_Securities_Transaction_Tax__c + Stamp_Duty__c + SEBI_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>