force-app/main/default/objects/Trade_Execution__c/fields/Trade_Request__c.field-meta.xml
<CustomField>
    <fullName>Trade_Request__c</fullName>
    <label>Trade Request</label>
    <referenceTo>Trade_Request__c</referenceTo>
    <relationshipLabel>Trade Executions</relationshipLabel>
    <relationshipName>Trade_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>