force-app/main/default/objects/Trade_Execution__c/validationRules/Validation_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_1</fullName>
    <active>true</active>
    <errorConditionFormula>Executed_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Executed_Quantity__c</errorDisplayField>
    <errorMessage>Executed Quantity should be greater than 0.</errorMessage>
</ValidationRule>