force-app/main/default/objects/Trade_Execution__c/validationRules/Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>Executed_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Executed_Price__c</errorDisplayField>
    <errorMessage>Executed Price must be greater than 0.</errorMessage>
</ValidationRule>