force-app/main/default/objects/Trade_Execution__c/validationRules/Validation_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_3</fullName>
    <active>true</active>
    <errorConditionFormula>Execution_Date_Time__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Execution_Date_Time__c</errorDisplayField>
    <errorMessage>Execution Date cannot be in the future.</errorMessage>
</ValidationRule>