force-app/main/default/objects/Trade_Execution__c/validationRules/Validation_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_4</fullName>
    <active>true</active>
    <errorConditionFormula>Brokerage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Brokerage__c</errorDisplayField>
    <errorMessage>Brokerage cannot be negative.</errorMessage>
</ValidationRule>